<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="title_activity_instructions">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="address">Address</string>
    <string name="please_enter_your_delivery_details">Please Enter Your Delivery Details</string>
    <string name="name">Name</string>
    <string name="addr">addr</string>
    <string name="nameTemp">nameTemp</string>
    <string name="next">Next</string>
    <string name="ttt">ttt</string>
    <string name="thank_you">Thank You...!</string>
    <string name="your_orders_are_still_processing">Your Orders are still processing...</string>
    <string name="stay_with_us_our_delivery_agent_will_contact_you_immediatly">Stay with us, Our delivery agent will contact you immediatly.</string>
    <string name="thank_youu">Thank You!...</string>
    <string name="todo">TODO</string>
    <string name="instruction">Follow Instruction</string>
    <string name="real">1. Your address must be a real one.</string>
    <string name="phone">2. Your telephone number must be a working       one.</string>
    <string name="bag">3. We avoid using polythene bags.Then you             have to pay Rs 5 for one paper bag.</string>
    <string name="confirm">4. After you confirm the delivery details,our delivery argent will contact you.</string>
    <string name="contact">5. When you finished the all steps, our argent call to you between 5 minutes. Please keep the phone with you. Stay with usas long as contact you.</string>
    <string name="Cancelq">Cancel</string>
    <string name="Next">Next</string>
    <string name="detail">Enter your details</string>
    <string name="mmm">Mr. / Mis.</string>
    <string name="add">No.5, Gemunu Road, Nugegoda</string>
    <string name="tp">Telephone Number</string>
    <string name="nine">+94********</string>
    <string name="mail">info@consoleit.com</string>
    <string name="order">your orders are still processing....</string>
    <string name="con">Stay with us. Our delivery agent will contact you immediatly.</string>
    <string name="Finish">Finish</string>
    <string name="nextt">Next</string>
    <string name="todos">TODO</string>
    <string name="mr_mis">Mr. / Mis.</string>
    <string name="no_5_gemunu_road_nugegoda">No.5, Gemunu Road, Nugegoda</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="_94">+94********</string>
    <string name="info_consoleit_com">info@consoleit.com</string>
    <string name="TODO">TODO</string>
    <string name="term"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="termss"><![CDATA[Terms & Conditions]]></string>
    <string name="choose_a_delivery_type">Choose a Delivery Type</string>
    <string name="RadioButton">Delivery Bike</string>
    <string name="RadioButton2">Delivery Threeweeller</string>
    <string name="radio3">Delivery Mini Van</string>
    <string name="imageView2">TODO</string>
    <string name="back">Back</string>
    <string name="master_card">Master Card</string>
    <string name="visa_card">Visa Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="choose_your_patment_method">Choose Your Patment Method</string>
    <string name="you_must_enter_your_valid_address_now_in_live">You must enter your valid Address now in live.</string>
    <string name="you_must_enter_your_valid_and_working_telephonenumber">You must enter your valid and working telephonenumber</string>
    <string name="phone1">\@string/you_must_enter_your_valid_and_working_telephone number</string>
    <string name="phoneqq">\@string/you_must_enter_your_valid_and_working_telephone number</string>
    <string name="textview">TextView</string>
    <string name="choose_your_payment_method">Choose Your Payment Method</string>
    <string name="faq">FAQ</string>
    <string name="you_must_enter_your_valid_and_working_telephone_number">You must enter your valid and working telephone number</string>
    <string name="we_avoid_using_polythene_bags_then_you_have_to_pay_rs_5_00_for_one_paper_bag">We avoid using polythene bags.Then you have to pay Rs.5.00 for one paper bag.</string>
    <string name="we_delivery_around_the_western_province_only_within_5km_in_narahenpita_town_delivery_fee_is_free_for_every_additionl_kilometer_add_rs_20">We delivery around the Western Province only. Within 5KM in Narahenpita town, delivery fee is free.For every additionl kilometer,add Rs.20</string>
    <string name="you_can_select_your_delivery_vehicle_as_you_wish">You can select your delivery vehicle as you wish.</string>
    <string name="when_we_arrive_your_home_you_can_pay_though_any_card_or_cash">When we arrive your home, you can pay though any card or cash.</string>
    <string name="how_i_deliver_my_orders">How i deliver my orders?</string>
    <string name="after_you_added_item_to_the_cart_you_should_fill_the_delivery_application_and_mark_the_delivery_vehicle_method">After you added item to the cart, You should fill the delivery application and mark the delivery vehicle,method.</string>
    <string name="how_we_know_our_delivery_prices">How we know our delivery prices?</string>
    <string name="any_vehicle_around_5_km_delivery_chargess_will_be_free_but_additional_each_1_km_we_will_charge_rs_20_for_bike_rs_30_for_threeweel_and_rs_40_for_van">Any vehicle, around 5 KM delivery chargess will be free.But additional each 1 KM we will charge Rs.20 for bike, Rs.30 for threeweel and Rs.40 for van.</string>
    <string name="if_our_order_will_damage_how_we_return_it">If our order will damage, how we return it?</string>
    <string name="you_should_call_our_hotline_and_tell_your_problem_we_will_take_a_action_for_that_matter_imediatly">You should call our hotline and tell your problem.We will take a action for that matter imediatly.</string>
    <string name="if_our_both_address_and_telephone_number_will_be_wrong">If our both address and telephone number will be wrong?</string>
    <string name="your_order_will_be_cancel_and_you_has_to_pay_it_s_delivery_fee_at_the_next_order_it_mean_when_you_order_next_time_that_delivery_fee_will_add">Your order will be cancel and you has to pay it\'s delivery fee at the next order.It mean when you order next time that delivery fee will add.</string>
    <string name="delete">Delete</string>
    <string name="backs">Back</string>
    <string name="update_your_details">Update Your Details</string>
    <!--    <string name="update">Update</string>-->
    <!--    <string name="skip">Skip</string>-->
    <!--    <string name="update_name">Update Name</string>-->
    <!--    <string name="update_address">Update Address</string>-->
    <!--    <string name="update_telephone_number">Update Telephone Number</string>-->
    <!--    <string name="update_e_mail">Update E-mail</string>-->
    <!--    <string name="update_details">Update Details</string>-->
    <string name="update_your_name">Update Your Name</string>
    <string name="update_your_address">Update Your Address</string>
    <string name="update_details">Update Details</string>
    <string name="skip">Skip</string>
    <string name="update">Update</string>
    <string name="update_name">Update Name</string>
    <string name="update_address">Update Address</string>
    <string name="update_telephone_number">Update Telephone Number</string>
    <string name="update_e_mail">Update E-mail</string>
    <string name="close">Close</string>
    <string name="phone_number">Phone Number...</string>
    <string name="full_name">Full Name...</string>
    <string name="change_profile">Change Profile</string>
</resources>
