<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQ">

    <Button
        android:id="@+id/button111"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="302dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/how_i_deliver_my_orders"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="297dp"
        android:layout_height="57dp"
        android:text="@string/after_you_added_item_to_the_cart_you_should_fill_the_delivery_application_and_mark_the_delivery_vehicle_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="291dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/how_we_know_our_delivery_prices"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="299dp"
        android:layout_height="71dp"
        android:text="@string/any_vehicle_around_5_km_delivery_chargess_will_be_free_but_additional_each_1_km_we_will_charge_rs_20_for_bike_rs_30_for_threeweel_and_rs_40_for_van"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/if_our_order_will_damage_how_we_return_it"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:text="@string/you_should_call_our_hotline_and_tell_your_problem_we_will_take_a_action_for_that_matter_imediatly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/if_our_both_address_and_telephone_number_will_be_wrong"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:text="@string/your_order_will_be_cancel_and_you_has_to_pay_it_s_delivery_fee_at_the_next_order_it_mean_when_you_order_next_time_that_delivery_fee_will_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

</androidx.constraintlayout.widget.ConstraintLayout>