<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Terms">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/terms_conditions"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="370dp"
        android:layout_height="43dp"
        android:layout_marginBottom="600dp"
        android:text="@string/real"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="371dp"
        android:layout_height="78dp"
        android:layout_marginTop="12dp"
        android:text="@string/phone"
        android:textColor="#101010"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="366dp"
        android:layout_height="74dp"
        android:scrollbarTrackHorizontal="@color/colorPrimaryDark"
        android:scrollbarTrackVertical="@android:drawable/checkbox_on_background"
        android:text="@string/bag"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="363dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:text="@string/confirm"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="360dp"
        android:layout_height="99dp"
        android:layout_marginTop="92dp"
        android:text="@string/contact"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button44"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/Cancelq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2"
        app:layout_constraintVertical_bias="0.297"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>