<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryThankyouActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="263dp"
        android:layout_height="74dp"
        android:text="@string/thank_you"
        android:textColor="#0C0C0C"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:text="@string/your_orders_are_still_processing"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="333dp"
        android:layout_height="114dp"
        android:text="@string/stay_with_us_our_delivery_agent_will_contact_you_immediatly"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.097" />

    <ImageView
        android:layout_width="359dp"
        android:layout_height="240dp"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="144dp" />

</androidx.constraintlayout.widget.ConstraintLayout>