<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/update_account_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/bike"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/settings_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_change_btn"
        android:hint="@string/phone_number"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:hint="@string/full_name"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_full_name"
        android:hint="Address..."
        android:layout_margin="15dp"
        android:padding="10dp"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_below="@+id/settings_address"
        android:backgroundTint="#3F51B5"
        android:text="DELETE"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.364"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_below="@+id/settings_address"
        android:backgroundTint="#3F51B5"
        android:text="SKIP"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.364"
        tools:ignore="MissingConstraints" />


</RelativeLayout>